--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,14 @@
-# Gemini API Configuration
-GEMINI_API_KEY=AIzaSyA3ADQsUYCdl669M1ZVJhQcWe4rTbxXLmM
+# Groq API Configuration (Llama AI)
+# Dapatkan API key gratis di: https://console.groq.com/keys
+GROQ_API_KEY=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
+
+# Hugging Face API Configuration (Text-to-Image)
+# Dapatkan API key gratis di: https://huggingface.co/settings/tokens
+HUGGINGFACE_API_KEY=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
+
+# Gemini API Configuration (Backup)
+# Dapatkan API key gratis di: https://aistudio.google.com/app/apikey
+GEMINI_API_KEY=AIzaSyC_7NFCtmwUWL48hJvZdByGt7v20UYjeSU
 
 # Next.js Configuration
 NEXTAUTH_URL=http://localhost:3000
